test/spec_vectors/align/ok/module_21.wat
(module (memory 0) (func (f32.store align=4 (i32.const 0) (f32.const 1.0))))