test/spec_vectors/align/fail/module_99.wat
(module (memory 0) (func (i32.store align=8 (i32.const 0) (i32.const 0))))